fix: board list align on mobile

--- a/src/pages/Main/main.scss
+++ b/src/pages/Main/main.scss
@@ -7,6 +7,10 @@
         padding: 70px 20px 20px 20px;
         display: flex;
         flex-wrap: wrap;
-        gap: 20px
+        gap: 20px;
+
+        @media screen and (max-width: 500px) {
+            justify-content: center;
+        }
     }
 }
